# fastapi-template

./: (综自改)花港变-YK-2025-001-25-0168(自动化做库).xls  .gitignore  README.md  pyproject.toml  test_api.py
app/: main.py
app/api/: router.py
app/api/v1/: ocr.py  router.py  yolo.py
app/api/v1/endpoints/: acceptance.py  communication.py  project.py  video.py
app/core/: config.py
app/models/: acceptance.py  project.py  video.py
app/protocols/: base.py  manager.py
app/protocols/implementations/: lrkcapture_protocol.py  sample_protocol.py
app/schemas/: ocr.py  yolo.py
app/services/: ocr_service.py  video_service.py  yolo_service.py
projects/苏州测试220V变2/: config.toml
web/: index.html  package.json  pnpm-lock.yaml  vite.config.js
web/src/: App.vue  main.js
web/src/api/: acceptance.js  communication.js  project.js  video.js
web/src/router/: index.js
web/src/utils/: request.js
web/src/views/: AcceptanceDetail.vue  AcceptanceLayout.vue  ProjectList.vue
web/src/views/acceptance/: ImportAcceptanceDialog.vue  MessageComm.vue  PointTable.vue  RecognitionSettingsDialog.vue  RemoteAcceptancePanel.vue  VideoConnection.vue
web/src/views/tabs/: MessageComm.vue  PointTable.vue  RemoteAcceptance.vue  VideoConnection.vue
weights/PP-OCRv6_medium_rec_onnx/: .gitattributes
