[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.138.0",
    "numpy>=1.24,<2.4",
    "onnxruntime>=1.27.0",
    "opencv-python>=4.13.0.92",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic-settings<3.0.0",
    "rapidocr>=3.9.0",
    "ultralytics>=8.4.75",
    "xlrd>=2.0.2",
]
